--- a/main.html
+++ b/main.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
+    <title>Hello World</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-
 <body>
-	<!-- PLease only edit this file for this asssignment. Thanks!-->
-	<h1>Hello </h1>
+    <!-- Please only edit this file for this assignment. Thanks! -->
+    <h1>Hello World</h1>
+    <script src="script.js"></script>
 </body>
-
 </html>
