--- a/main.html
+++ b/main.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
+
 <html>
+
 <head>
-    <title>Hello World</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
+
 <body>
-    <!-- Please only edit this file for this assignment. Thanks! -->
-    <h1>Hello World</h1>
-    <script src="script.js"></script>
+	<!-- PLease only edit this file for this asssignment. Thanks!-->
+	<h1>Hello World</h1>
 </body>
+
 </html>
